deployment/template.yaml
# $schema: https://raw.githubusercontent.com/aws/serverless-application-model/main/samtranslator/schema/schema.json

Transform: AWS::Serverless-2016-10-31

Parameters:
  DynamoDBARN:
    Type: String
    Default: arn:aws:dynamodb:ap-south-1:513758042129:table/url-shortener-test

Globals:
  Function:
    Architectures:
      - arm64
    MemorySize: 1024
    Runtime: python3.12
    Timeout: 60
    CodeUri: ../


Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/21
      EnableDnsSupport: true
      EnableDnsHostnames: true

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "ap-south-1a"

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "ap-south-1b"

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable

  Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteTable

  DynamoDBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref RouteTable

  LambdaRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: LambdaDynamoDBAccessPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action: "dynamodb:*"
                Resource:
                  - !Ref DynamoDBARN
                  - !Sub "${DynamoDBARN}/index/*"

  ApiGateway:
    Type: AWS::Serverless::Api
    Properties:
      Name: !Sub ${AWS::StackName}-api-gateway
      StageName: dev


  Signup:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Handler: app.lambdas.auth.signup_handler
      MemorySize: 2048
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: POST
            Path: /auth/signup

  Login:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Handler: app.lambdas.auth.login_handler
      MemorySize: 2048
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: POST
            Path: /auth/login

  SQSEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: Allow lambda to access sqs
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref LambdaSecurityGroup

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: SG for lambda enis
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0

  CacheSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: SG for allowing traffic from lambda sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6380
          SourceSecurityGroupId: !Ref LambdaSecurityGroup

  ValkeySubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: subnets to place elasticache nodes
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

#  ValkeyCache:
#    Type: AWS::ElastiCache::ReplicationGroup
#    Properties:
#      CacheNodeType: cache.t4g.micro
#      Engine: valkey
#      ReplicationGroupDescription: valkey cache for rate limiting and storing hot shorturls
#      NumCacheClusters: 2
#      CacheSubnetGroupName: !Ref ValkeySubnetGroup
#      SecurityGroupIds:
#        - !Ref CacheSecurityGroup
#      AutomaticFailoverEnabled: true
#      TransitEncryptionEnabled: false
#      AtRestEncryptionEnabled: false

  ValkeyCacheServerless:
    Type: AWS::ElastiCache::ServerlessCache
    Properties:
      ServerlessCacheName: !Sub url-shortener-serverless-cache
      Engine: valkey
      SecurityGroupIds:
        - !Ref CacheSecurityGroup
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

  MetricsSQS:
    Type: AWS::SQS::Queue
    Properties:
      VisibilityTimeout: 200
      QueueName: !Sub ${AWS::StackName}-metrics-sqs
      RedrivePolicy:
        deadLetterTargetArn: !GetAtt MetricsDLQ.Arn
        maxReceiveCount: 3

  MetricsDLQ:
    Type: AWS::SQS::Queue
    Properties:
      VisibilityTimeout: 200
      QueueName: !Sub ${AWS::StackName}-metrics-dlq

  SQSEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.sqs
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2
      SecurityGroupIds:
        - !Ref SQSEndpointSecurityGroup


  CreateShortUrl:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Handler: app.lambdas.url_shortener.create_shorturl_handler
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: POST
            Path: /shorturls

  GetUrlsByUser:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Handler: app.lambdas.url_shortener.get_user_short_urls
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: GET
            Path: /shorturls

  UpgradeSubscription:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Handler: app.lambdas.subscription.upgrade_subscription
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: PATCH
            Path: /upgrade

  VpcLambdaRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
        - PolicyName: DynamoAccess
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action: "dynamodb:*"
                Resource:
                  - !Ref DynamoDBARN
                  - !Sub "${DynamoDBARN}/index/*"
        - PolicyName: SQSSend
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - sqs:SendMessage
                  - sqs:GetQueueAttributes
                  - sqs:GetQueueUrl
                  - sqs:ReceiveMessage
                  - sqs:DeleteMessage
                Resource: !GetAtt MetricsSQS.Arn

  GetOriginalUrl:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt VpcLambdaRole.Arn
      Handler: app.lambdas.url_shortener.get_url_handler
      VpcConfig:
        SecurityGroupIds:
          - !Ref LambdaSecurityGroup
        SubnetIds:
          - !Ref Subnet1
          - !Ref Subnet2
      Environment:
        Variables:
          REDIS_ENDPOINT: !GetAtt ValkeyCacheServerless.Endpoint.Address
          QUEUE_URL: !Ref MetricsSQS
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: GET
            Path: /{short_url}

  ProcessBatch:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt VpcLambdaRole.Arn
      Handler: app.lambdas.metrics.process_metrics
      Events:
        SQSEvent:
          Type: SQS
          Properties:
            Queue: !GetAtt MetricsSQS.Arn
            BatchSize: 100
            MaximumBatchingWindowInSeconds: 20
            FunctionResponseTypes:
            - ReportBatchItemFailures

  GetUrlMetrics:
    Type: AWS::Serverless::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Handler: app.lambdas.metrics.get_url_metrics
      Events:
        ApiEvent:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Method: GET
            Path: /{short_url}/metrics
